--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
         <h1>Featured Products</h1>
         <div class="all-each">
         <div class="each">
-            <a href=""><img src="/Reversible Bucket Hat - Unisex - Gold Yellow and Black.jpg" alt="" width="300" height="200px"></a>
+            <a href=""><img src="Reversible-Bucket-Hat.jpg" alt="" width="300" height="200px"></a>
             <p>Bucket Hat</p>
             <p>$20.00</p>
         </div>
 
         <div class="each">
-            <a href=""><img src="/reflective shorts.jpg" alt="" width="200" height="200px"></a>
+            <a href=""><img src="reflective-shorts.jpg" alt="" width="200" height="200px"></a>
             <p>Reflective Shorts</p>
             <p>$25.00</p>
         </div>
         <div class="each">
-            <a href=""><img src="/jewelry.jpg" alt="" width="300" height="200px"></a>
+            <a href=""><img src="jewelry.jpg" alt="" width="300" height="200px"></a>
             <p>Minimalist Jewelry</p>
             <p>$15.00</p>
 
         </div>
         <div class="each">
-            <a href=""><img src="/phone case.jpg" alt="" width="300" height="200px"></a>
+            <a href=""><img src="phone-case.jpg" alt="" width="300" height="200px"></a>
             <p>Phone Case</p>
             <p>$10.00</p>
         </div>
